rename references to relationships
